# Django_skillbox

./: Dockerfile  devices.csv  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: log.txt
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templates/myauth/: about_me.html  base.html  login.html  profile_update_form.html  register.html  user_details.html  user_list.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: middlewares.py  urls.py  views.py
mysite/requestdataapp/templates/requestdataapp/: base.html  error_download_file.html  error_time_request.html  file_upload.html  request_query_params.html  user_bio_form.html
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: products-fixture.json
mysite/shopapp/management/commands/: create_order.py  create_products.py  (+1 more)
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_product_created_by.py  0008_alter_product_created_by.py  0009_order_receipt.py  0010_product_preview.py  0011_productimage.py  0012_alter_productimage_description.py  0013_alter_order_options_alter_product_options.py
(+18 files in other folders)
